--- a/plugin/Makefile
+++ b/plugin/Makefile
@@ -8,7 +8,7 @@ CXX := $(STEAM_RUNTIME_PATH)/bin/g++
 
 all: $(PLUGIN)
 
-SRC := compat.cpp plugin.cpp byteseq.cpp module.cpp anchor.cpp sufarr.cpp scratchpad.cpp patch.cpp detour.cpp patches/transitions_fix.cpp
+SRC := compat.cpp plugin.cpp byteseq.cpp module.cpp anchor.cpp sufarr.cpp scratchpad.cpp patch.cpp detour.cpp patches/transitions_fix.cpp patches/player_stuck.cpp
 SRC := $(addprefix src/, $(SRC))
 OBJ := $(addprefix obj/, $(SRC:.cpp=.o))
 
