--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         submodules: 'recursive'
     - name: Install Packages     
-      run: sudo apt-get install build-essential libc6-dev-i386
+      run: sudo apt-get install build-essential libc6-dev-i386 gcc-multilib g++-multilib
 
     - name: Cache Runtime
       id: cache-runtime
