--- a/plugin/Makefile
+++ b/plugin/Makefile
@@ -4,7 +4,7 @@ STEAM_RUNTIME_PATH ?= $(realpath ../runtime)
 
 all: $(PLUGIN)
 
-SRC := compat.cpp plugin.cpp byteseq.cpp module.cpp anchor.cpp sufarr.cpp scratchpad.cpp patch.cpp detour.cpp hook.cpp patches/anchors.cpp patches/transitions_fix.cpp patches/player_spawn.cpp patches/player_stuck.cpp patches/door_stuck.cpp
+SRC := compat.cpp plugin.cpp byteseq.cpp module.cpp anchor.cpp sufarr.cpp scratchpad.cpp patch.cpp detour.cpp hook.cpp patches/anchors.cpp patches/transitions_fix.cpp patches/player_spawn.cpp patches/player_stuck.cpp patches/door_stuck.cpp patches/env_fade.cpp
 SRC := $(addprefix src/, $(SRC))
 OBJ := $(addprefix obj/, $(SRC:.cpp=.o))
 
@@ -14,17 +14,17 @@ SDKDYNLIB := tier0 vstdlib
 SDKSTATLIB := tier1.a mathlib.a tier2.a
 SDKSTATLIB := $(addprefix $(SDK)/mp/src/lib/public/linux32/, $(SDKSTATLIB))
 
-# OPTFLAGS ?= -O0 -g3
-# OPTFLAGS ?= -O0 -g3 -fsanitize=address
-OPTFLAGS ?= -O3 -g3
-
 ifeq ($(OS), Windows_NT)
 	OSFLAGS := -DWIN32 -D_WIN32
 else
 	OSFLAGS := -DPOSIX -D_POSIX -DLINUX -D_LINUX 
 endif
 
-CPPFLAGS := $(OPTFLAGS) -m32 -std=gnu++17 -march=core2 -mtune=core2 -msse2 -mfpmath=sse -fpermissive -DNO_HOOK_MALLOC -DNO_MALLOC_OVERRIDE -DGNUC -DCOMPILER_GCC -DDLLNAME=p2mppatch
+# OPTFLAGS ?= -O0 -g3
+# OPTFLAGS ?= -O0 -g3 -fsanitize=address
+OPTFLAGS ?= -O3 -g3
+
+CPPFLAGS := $(OSFLAGS) $(OPTFLAGS) -m32 -std=gnu++17 -march=core2 -mtune=core2 -msse2 -mfpmath=sse -fpermissive -DNO_HOOK_MALLOC -DNO_MALLOC_OVERRIDE -DGNUC -DCOMPILER_GCC -DDLLNAME=p2mppatch
 CFLAGS := $(CPPFLAGS) -I"src" -I"$(SDK)/mp/src/public" -I"$(SDK)/mp/src/public/tier0" -I"$(SDK)/mp/src/public/tier1" -I"$(COMPILER)/include/c++/4.6.3"
 LFLAGS := $(CPPFLAGS) -shared -Wl,--no-undefined -L"$(SDK)/mp/src/lib/public/linux32" -u _CreateInterface -lm -ldl -lpthread
 
